--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -52,7 +52,7 @@
                                 aria-current="page" href="/"><i class="fa-solid fa-house"></i> Home</a></li>
                     </th:block>
 
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/products">Product</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/products">Art Works</a></li>
 
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> Category </a>
