--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,15 +12,15 @@
 		<div id="carouselExample" class="carousel slide">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="img/ecom1.png" class="d-block w-100" alt="..."
+					<img src="img/banner.jpg" class="d-block w-100" alt="..."
 						height="350px">
 				</div>
 				<div class="carousel-item">
-					<img src="img/ecom3.jpg" class="d-block w-100" alt="..."
+					<img src="img/banner1.jpeg" class="d-block w-100" alt="..."
 						height="350px">
 				</div>
 				<div class="carousel-item">
-					<img src="img/ecom2.jpg" class="d-block w-100" alt="..."
+					<img src="img/banner2.jpeg" class="d-block w-100" alt="..."
 						height="350px">
 				</div>
 			</div>
